tests/reject/coerce_annot_narrow.ty
# no silent float->int narrowing in an annotated binding (must reject, both compilers)
fn main():
    y := 2.5
    x: int = y
    println(str(x))
